<resources>
   	<string name="crash_report_text">"Oops ! I crashed, but a report has been sent to my developer to help fix the issue !"</string>
    <string name="admob_id">a14ff82a6fc607c</string>
    <string name="currency">$</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="infor_internet_connection_false">Could not connect to internet. Please check your internet connection.</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh</string>
    <string name="fetch_no_new_image">There are no new photos.</string>
    <string name="fetch_images_success"> photos have been fetched successfully.</string>
    <string name="accounts">Accounts</string>
    <string name="services">Services</string>
    <string name="found">Found</string>
    <string name="downloading">Downloading</string>
    <string name="photos_settings">Photos Settings</string>
    <string name="max_file_size_download">Maximum file size of download photo</string>
    <string name="exit_message">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="gallery_max_display_photos">Max photos display on Gallery page</string>
    <string name="photos">Photos</string>
    <string name="language_settings">Language Settings</string>
    <string name="lang_en">English</string>
    <string name="lang_de">German</string>
    <string name="lang_vi">Vietnamese</string>
    <string name="empty"></string>
    <string name="description">Description</string>
    <string name="upload_infor_choose_account">Please select at least one account for upload photo.</string>
    <string name="accept">Accept</string>
    <string name="geolocation">Geolocation</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="uploading">Uploading</string>
    <string name="error_gps_fail">Getting GPS information fail</string>
    <string name="infor_turn_on_gps">Please turn on your GPS</string>
    <string name="infor_loading_photo_in_map">Loading photo geolocation data into maps. Please wait for a while.</string>
    <string name="infor_map_have_num_photos"> photos has been displayed on Maps.</string>
    <string name="infor_dialog_add_account_drupal_intro">If you want to add this features on your Drupal. Please see introduction here.</string>
    <string name="infor_dialog_add_account_wordpress_intro">If you want to add this features on your Wordpress. Please see introduction here.</string>
    <string name="infor_dialog_add_account_drupal_intro_link">View introduction</string>
    <string name="infor_dialog_add_account_wordpress_intro_link">View introduction</string>
    <string name="url_drupal_introduction">http://mbm.vn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="services_link">Services link</string>
    <string name="infor_choose_feeds_services">Choose feeds services</string>
    <string name="infor_feeds_services">Feeds Services</string>
    <string name="error_feeds_services_choose_feed">Please select at least one feed service for get photos.</string>
    <string name="error_upload_process_still_running">The Upload process is still running</string>
    <string name="error_upload_no_accounts">Please add an accounts for using to upload photos</string>
    <string name="error_upload_no_photo">Please add an photos for upload</string>
    <string name="infor_upload_loading_current_position">Loading current position&#8230;&#8230;&#8230;</string>
    <string name="error_upload_map_no_position">Please drop pin on the map to get position.</string>
    <string name="ask_delete_account">Are you sure you want to delete this account?</string>
    <string name="tags">Tags</string>
    <string name="tags_hint">A comma-seperated list of tags to apply to the photo.</string>
    <string name="clear">Clear</string>
    <string name="select">Select</string>
    <string name="newest">The Newest photo</string>
    <string name="owner">The Owner Photo</string>
    <string name="imageshack_note">Please note, that imageshack does not provide a gallery page of uploaded pictures at this time. Phimp.me will keep a list of images uploaded to imageshack for you. The app will only show images uploaded with the phimp.me app due to imageshack\'s current limitations.</string>
    <string name="person">Personal</string>
    <string name="personal">Personal Photos</string>
    <string name="publicphoto">Public</string>
    <string name="personalphoto">Personal</string>
    <string name="photos_loading">Loading photos from memory ! Please wait !</string>
    <string name="rotate">Rotate</string>
    <string name="infor_choose_public_feeds_services">Choose Public Feeds Services</string>
    <string name="infor_choose_pesonal_feeds_services">Choose Personal Feeds Services</string>
    <string name="infor_choose_personal_feeds_services">Choose Personal Feeds Services</string>
    <string name="localphotos">Local Photos</string>
    <string name="choose_folder">Choose folder</string>
    <string name="deletephoto">Delete downloaded photos</string>
    <string name="ask_delete_photo">Do you want to delete photos downloaded! It will delete all photo of PhimpMe application</string>
	<string name="ok">OK</string>
	<string name="feed_url">Please enter Rss Feed URL</string>
	<string name="myfeed">My Feed Photos</string>
	<string name="feedurl">Enter Feed Url</string>
	<string name="caching">Configuring...</string>
	<string name="photos_caching">Configuring for first use, please wait!</string>
	<string name="clearcache">Clear cache memory</string>
	<string name="clearbtn">Clear Cache</string>
	<string name="brightness">Brightness</string>
	<string name="support_forum">Support Forum</string>
	 <string name="plz">Please select photo</string>
    <string name="select_file">Select file</string>
    <string name="sent_file">Send file</string>
    <string name="txt_scan">Scan devices</string>
    <string name="txt_listdevice"> Bluetooth devices</string>
    <string name="txt_scanning">Scanning </string>
    <string name="search_devices">Select device to sent photo</string>
    <string name="sentphoto">Select device to sent photo</string>
    <string name="bluetoothshare">Bluetooth Share Photo</string>
    <string name="photosent"></string>
    <string name="no_image">No Image</string>
    <string name="back">Back</string>
    <string name="googleadmod">Google Admod</string>
    <string name="adv">Advertising</string>
    <string name="donate">Donate</string>
    <string name="phimpmegallery">Phimpme Gallery</string>
    <string name="wait">Please wait...</string>
    <string name="carefully">CareFully !</string>
    <string name="no_photo_delete">"Don't have photo to delete !"</string>
  <string name="required_fields">Required Fields</string>
  <string name="required_field">Required Field</string>
  <string name="url_username_password_required">Please fill in all of the fields before submitting.</string>
  <string name="xmlrpc_error">Could not connect. Please enter the full path to xmlrpc.php on your site and try again.</string>
  <string name="no_blogs_found">No Blogs Found</string>
  <string name="no_blogs_message">No %s blogs were found for that account.</string>
  <string name="additional">additional</string>
  <string name="add_all">Add All</string>
  <string name="add_selected">Add Selected</string>
  <string name="select_blogs">Select Blogs</string>
  <string name="no_network_title">No network available</string>
  <string name="no_network_message">There is no network available. Please connect to a network and try again.</string>
  <string name="categories">Categories</string>
  <string name="select_categories">Select Categories</string>
  <string name="tags_and_categories">Tags &amp; Categories</string>
  <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
  <string name="post_content">Post Content</string>
  <string name="post_title">Post Title</string>
  <string name="dont_yet_have_a_blog">Don\'t yet have a blog?</string>
  <string name="max_thumbnail_px_width">Default image width</string>
  <string name="get_free_blog">Get a free blog at WordPress.com</string>
  <string name="tagline">Start blogging from your mobile in seconds.</string>
  <string name="tagline_tablet">Start blogging from your tablet in seconds.</string>
  <string name="i_have_wp_blog">Add blog hosted at WordPress.com</string>
  <string name="i_have_blog">Add self-hosted WordPress blog</string>
  <string name="new_to_wp">Start a new blog at WordPress.com</string>
  <string name="blogs">Blogs</string>
  <string name="account_details">Account Details</string>
  <string name="status">Status</string>
  <string name="l_status">Status:</string>
  <string name="comment_content">Comment Content</string>
  <string name="anonymous">Anonymous</string>
  <string name="app_name">WordPress</string>
  <string name="post">Post</string>
  <string name="page">Page</string>
  <string name="posts">Posts</string>
  <string name="pages">Pages</string>
  <string name="eula">GNU GENERAL PUBLIC LICENSE</string>
  <string name="about">About</string>
  <string name="save">Save</string>
  <string name="add">Add</string>
  <string name="selected_categories">Selected categories:</string>
  <string name="publish">Publish? </string>
  <string name="success">Success</string>
  <string name="decline">Decline</string>
  <string name="hint_menu_to_add_acc">Select \'Menu\' to add another account or toconfigure comment notifications.</string>
  <string name="add_account">Add Account</string>
  <string name="notification_settings">Settings</string>
  <string name="notification_sound">Play notification sound</string>
  <string name="notification_vibrate">Vibrate</string>
  <string name="notification_blink">Blink notification light</string>
  <string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
  <string name="no">No</string>
  <string name="account_removed_successfully">Blog removed successfully</string>
  <string name="error">Error</string>
  <string name="could_not_remove_account">Could not remove blog.</string>
  <string name="edit_page">Edit Page</string>
  <string name="getting_page">Getting page</string>
  <string name="please_wait_getting_page">Please wait while attempting to get page (note - pictures will not be loaded)</string>
  <string name="edit_post">Edit Post</string>
  <string name="getting_post">Getting post</string>
  <string name="please_wait_getting_post">Please wait while attempting to get post (note - pictures will not be loaded)</string>
  <string name="no_text_selected">No text selected</string>
  <string name="howto_select_text">You can select text by long pressing in the text area.</string>
  <string name="select_text_to_bold">Please select some text first in order to bold it.</string>
  <string name="select_text_to_link">Please select some text first in order to link it.</string>
  <string name="select_text_to_emphasize">Please select some text in order to emphasize it.</string>
  <string name="select_text_to_blockquote">Please select some text in order to place it in a blockquote.</string>
  <string name="original_size">Original Size</string>
  <string name="refreshing_categories">Refreshing Categories</string>
  <string name="attempting_categories_refresh">Attempting to refresh categories</string>
  <string name="connection_error">Connection Error</string>
  <string name="connection_error_occured">A connection error has occurred. Please try again later.</string>
  <string name="categories_refreshed">Categories refreshed</string>
  <string name="url">Blog URL</string>
  <string name="joomla_note">If you want use this feature. Please install component joooid in your joomla host !</string>
</resources>