<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    android:scrollbars="none" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/wpcomLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/wpcom" />

		<RelativeLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/section1"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/wpcomLogo"
		    android:orientation="vertical" >

		    <TextView
		        android:id="@+id/l_section1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/wpcomLogo"
		        android:paddingLeft="20dp"
		        android:text="@string/account_details"
		        android:textColor="@color/black" />
			
		    <EditText
		        android:id="@+id/et_wp_add_account_url"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/l_section1"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="14dp"
		        android:ems="10"
		        android:hint="@string/url" />
		    
		    <EditText
		        android:id="@+id/et_wp_add_account_username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/et_wp_add_account_url"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:ems="10"
		        android:hint="@string/username" />

		    <EditText
		        android:id="@+id/et_wp_add_account_password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/et_wp_add_account_username"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:ems="10"
		        android:hint="@string/password"
		        android:inputType="textPassword" />

			<Button
			    android:id="@+id/btn_wp_add_account_setting"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/et_wp_add_account_password"
			   	android:layout_marginLeft="20dp"
			    android:layout_marginTop="15dp"
			    android:text="@string/settings" />

		</RelativeLayout>

		<Button
		    android:id="@+id/btn_wp_add_account_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_below="@+id/section1"
		    android:layout_marginRight="86dp"
		    android:text="@string/cancel" />

		<Button
		    android:id="@+id/btn_wp_add_account_save"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_below="@+id/section1"
		    android:layout_marginRight="28dp"
		    android:text="@string/save" />

    </RelativeLayout>

</ScrollView>