<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtGalleryStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"            
            android:text="@string/loading" />

        <Button
            android:id="@+id/btnPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/txtGalleryStatus"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/refresh" />

        <ImageButton
            android:id="@+id/btnGalleryMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:contentDescription="@string/empty"
            android:src="@drawable/maps"
			android:layout_alignBottom="@+id/btnPublic"
			android:layout_toLeftOf="@+id/btnPublic"
			android:layout_alignParentTop="true" />

    </RelativeLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:background="#FFFFFF"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="10dp" />

   	<TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newest" />
    
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

    <GridView
        android:id="@+id/gvGalleryContainer"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:verticalSpacing="10dp" >

    </GridView>
    
	</RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
		android:layout_marginTop="5dp" />

	<GridView
	    android:id="@+id/gvPrivateGalleryContainer"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:horizontalSpacing="10dp"
	    android:numColumns="3"
	    android:verticalSpacing="10dp" >
	</GridView>
    
</LinearLayout>