<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/main"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#EEEEEE">
  <LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
      android:scaleType="centerInside"
      android:layout_width="200dip"
      android:layout_height="200dip"
      android:layout_marginTop="10dip"
      android:id="@+id/wordpress_logo"
      android:src="@drawable/new_account_logo">
    </ImageView>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:layout_marginTop="6dip"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:shadowColor="#FFFFFFFF"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/tagline"
        android:textColor="@color/black"
        android:textSize="20dip"
        android:typeface="serif" />

    <Button
      android:id="@+id/createWPAccount"
      android:layout_width="280dip"
      android:layout_height="wrap_content"
      android:textSize="14dip"
      android:shadowColor="#FFFFFFFF"
      android:singleLine="true"
      android:shadowDx="0"
      android:shadowDy="2"
      android:shadowRadius="1"
      android:background="@drawable/wp_button"
      android:text="@string/new_to_wp"
      android:textColor="#000000"/>

    <Button
      android:id="@+id/dotcomExisting"
      android:layout_width="280dip"
      android:layout_height="wrap_content"
      android:textSize="14dip"
      android:shadowColor="#FFFFFFFF"
      android:singleLine="true"
      android:shadowDx="0"
      android:shadowDy="2"
      android:shadowRadius="1"
      android:background="@drawable/wp_button"
      android:text="@string/i_have_wp_blog"
      android:textColor="#000000"/>

    <Button
      android:id="@+id/dotorgExisting"
      android:layout_width="280dip"
      android:layout_height="wrap_content"
      android:textSize="14dip"
      android:shadowColor="#FFFFFFFF"
      android:singleLine="true"
      android:shadowDx="0"
      android:shadowDy="2"
      android:shadowRadius="1"
      android:background="@drawable/wp_button"
      android:text="@string/i_have_blog"
      android:textColor="#000000"/>

  </LinearLayout>
</ScrollView>